--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="Styles/style.css">
 </head>
 <body>
-    
+    <main>
+        <nav>
+            
+        </nav>
+    </main>
 </body>
 </html>
