--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
 <body>
     <main>
         <nav>
-            
+            <h1>LuxeCars</h1>
+            <ul>
+                <l><a href=""></a></l>
+                <l><a href=""></a></l>
+                <l><a href=""></a></l>
+                <l><a href=""></a></l>
+            </ul>
         </nav>
     </main>
 </body>
