--- a/index.html
+++ b/index.html
@@ -11,12 +11,16 @@
         <nav>
             <h1>LuxeCars</h1>
             <ul>
-                <l><a href=""></a></l>
-                <l><a href=""></a></l>
-                <l><a href=""></a></l>
-                <l><a href=""></a></l>
+                <li><a href="index.html">Accueil</a></li>
+                <li><a href="/Pages/Vehicules.html">Vehicules</a></li>
+                <li><a href="/Pages/Services.html">Services</a></li>
+                <li><a href="/Pages/Contact.html">Contact</a></li>
             </ul>
+            <button>Login</button>
         </nav>
+        <section>
+            
+        </section>
     </main>
 </body>
 </html>
