--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Doc linkod git</title>
     <link rel="stylesheet" href="Styles/style.css">
 </head>
+
 <body>
     <main>
         <nav>
@@ -19,8 +21,20 @@
             <button>Login</button>
         </nav>
         <section>
-            
+            <div class="part">
+                <div class="part1">
+                    <h1>Buy <span> Your Car</span> Cheaper</h1>
+                    <h1>From Us</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur odio ipsum doloribus
+                        cupiditate eius. Modi similique facere distinctio culpa beatae!</p>
+                        <button>BUY NOW</button>
+                </div>
+                <div class="part2">
+                    <img src="media/lamboughini.jpg" alt="">
+                </div>
+            </div>
         </section>
     </main>
 </body>
+
 </html>
