--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <main>
         <nav>
-            <h1>LuxeCars</h1>
+            <h1>Luxe <span>Cars</span></h1>
             <ul>
                 <li><a href="index.html">Accueil</a></li>
                 <li><a href="/Pages/Vehicules.html">Vehicules</a></li>
