--- a/index.html
+++ b/index.html
@@ -17,16 +17,19 @@
                 <li><a href="/Pages/Vehicules.html">Vehicules</a></li>
                 <li><a href="/Pages/Services.html">Services</a></li>
                 <li><a href="/Pages/Contact.html">Contact</a></li>
+                <div class="log"><li><a href="/Pages/formulaire.html">LOGIN</a></li></div> 
+
             </ul>
-            <button>Login</button>
+           
         </nav>
         <section>
+    
             <div class="part">
                 <div class="part1">
                     <h1>Buy <span> Your Car</span> Cheaper</h1>
                     <h1>From Us</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur odio ipsum doloribus
-                        cupiditate eius. Modi similique facere distinctio culpa beatae!</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing <br> elit. Consequatur odio ipsum doloribus <br>
+                        cupiditate eius. Modi similique <br> facere distinctio culpa beatae!</p>
                         <button>BUY NOW</button>
                 </div>
                 <div class="part2">
