--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
                 <div class="part1">
                     <h1>Buy <span> Your Car</span> Cheaper</h1>
                     <h1>From Us</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur odio ipsum doloribus
-                        cupiditate eius. Modi similique facere distinctio culpa beatae!</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br> Consequatur odio ipsum doloribus
+                        cupiditate eius. <br>
+                         Modi similique facere distinctio culpa beatae!</p>
                         <button>BUY NOW</button>
                 </div>
                 <div class="part2">
