--- a/index.html
+++ b/index.html
@@ -17,10 +17,8 @@
                 <li><a href="/Pages/Vehicules.html">Vehicules</a></li>
                 <li><a href="/Pages/Services.html">Services</a></li>
                 <li><a href="/Pages/Contact.html">Contact</a></li>
-                <div class="log"><li><a href="/Pages/formulaire.html">LOGIN</a></li></div> 
-
             </ul>
-           
+           <button>LOGIN</button>
         </nav>
         <section>
     
