--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <nav>
             <h1>Luxe <span>Cars</span></h1>
             <ul>
-                <li><a href="index.html">Accueil</a></li>
+                <li><a href="..index.html">Accueil</a></li>
                 <li><a href="../Pages/Vehicules.html">Vehicules</a></li>
                 <li><a href="../Pages/Services.html">Services</a></li>
                 <li><a href="../Pages/Contact.html">Contact</a></li>
