--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
     <title>Document</title>
 </head>
 <body>
-    <main></main>
+    <main>
+        <nav>
+            <h1>luxe <span>Cars</span></h1>
+            <ul>
+                <li><a href=""></a></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+        </nav>
+    </main>
 </body>
 </html>
