--- a/index.html
+++ b/index.html
@@ -1,21 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <main>
         <nav>
-            <h1>luxe <span>Cars</span></h1>
+            <h1>Luxe<span>Cars</span></h1>
             <ul>
-                <li><a href=""></a></li>
-                <li></li>
-                <li></li>
-                <li></li>
+                <li><a href="">Accueil</a></a></li>
+                <li><a href="">Services</a></li>
+                <li><a href="">vehicules</a></li>
+                <li><a href="">contact</a></li>
             </ul>
+            <button>LOGIN IN</button>
         </nav>
+        <section>
+            <div class="part">
+            <div class="part1">
+                <h1>Buy <span>Your Car</span>,Cheaper</h1>
+                <h1>From Us</h1>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. <br> Sint sit culpa quidem quis! Inventore <br>
+                    maxime deleniti explicabo provident nostrum architecto!</p>
+                    
+                    <button>BUY NOW</button>
+            </div>
+            <div class="part2">
+                <img src="media/ford.jpg.jpg" alt="">
+            </div>
+
+        </div>
+        </section>
     </main>
 </body>
+
 </html>
