--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
             <button>LOGIN IN</button>
         </nav>
         <section>
-            <div class="part">
-            <div class="part1">
+            <div class="box">
+            <div class="box1">
                 <h1>Buy <span>Your Car</span>,Cheaper</h1>
                 <h1>From Us</h1>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. <br> Sint sit culpa quidem quis! Inventore <br>
@@ -30,7 +30,7 @@
                     
                     <button>BUY NOW</button>
             </div>
-            <div class="part2">
+            <div class="box2">
                 <img src="media/ford.jpg.jpg" alt="">
             </div>
 
