ceci est un style

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
         <nav>
             <h1>Luxe<span>Cars</span></h1>
             <ul>
-                <li><a href="">Accueil</a></a></li>
-                <li><a href="">Services</a></li>
-                <li><a href="">vehicules</a></li>
-                <li><a href="">contact</a></li>
+                <li><a href="index.html">Accueil</a></a></li>
+                <li><a href="./Pages/Services.html">Services</a></li>
+                <li><a href="./Pages/vehicules.html">vehicules</a></li>
+                <li><a href="./Pages/Contact.html">contact</a></li>
             </ul>
             <button>LOGIN IN</button>
         </nav>
