--- a/Pages/Services.html
+++ b/Pages/Services.html
@@ -4,8 +4,44 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../Styles/services.css ">
+   
 </head>
 <body>
-    <main></main>
+    <main>
+        <nav>
+            <h1>Luxe<span>Cars</span></h1>
+            <ul>
+                <li><a href="">Accueil</a></a></li>
+                <li><a href="">Services</a></li>
+                <li><a href="">vehicules</a></li>
+                <li><a href="">contact</a></li>
+            </ul>
+            <button>LOGIN IN</button>
+        </nav> 
+       <section class="service">
+        <h5>NOS SERVICES</h5>
+        <div class="service-card">
+        <div class="card">
+          <h4>FINANCEMENT</h4>
+          <p>Que vous soyez particulier ou entreprise, La Sénégalaise de l’Automobile a mis au point des solutions adaptées à chaque situation pour vous accompagner dans l’acquisition d’un véhicule neuf.</p> 
+            <button>Voir Plus</button>
+        </div>
+        <div class="card">
+            <h4>LOCATION</h4>
+            <p>Avec LUX CAR, decouvrez des offres de location variées et adapté à tout vos besoins 
+                Luxecars est un acteur incontournable dans la location de voitures au Sénégal. Louer chez Luxecars. c'est non seulement faire le choix de l'expérience et de la confiance, mais aussi opter pour notre expertise.
+            </p> 
+              <button>Voir Plus</button>
+          </div>
+          <div class="card">
+            <h4>ATELIERS et MAINTENANCE</h4>
+            <p>Avec près de 10 ateliers et un personnel hautement qualifié, les ateliers de la Sénégalaise de l'Automobile vous proposent les meilleures prestations d'entretien et de réparation de votre véhicule, quelque soit sa marque.</p> 
+              <button>Voir Plus</button>
+          </div>
+        </div>
+       </section>
+         
+    </main>
 </body>
 </html>
