--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
             <div class="box1">
                 <h1>Buy <span>Your Car</span>,Cheaper</h1>
                 <h1>From Us</h1>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. <br> Sint sit culpa quidem quis! Inventore <br>
-                    maxime deleniti explicabo provident nostrum architecto!</p>
+                <p>La parfaite symbiose entre et innovation technologiques. <br> Nous pouvons ainsi également afficher pour  <br>
+                    vous des contenus et de la publicité basés sur l'utilisation et travaller avec des partenaires</p>
                     
                     <button>BUY NOW</button>
             </div>
