--- a/Pages/Contact.html
+++ b/Pages/Contact.html
@@ -7,9 +7,20 @@
     <title>Document</title>
     <link rel="stylesheet" href="../Styles/index.css">
     <link rel="stylesheet" href="../Styles/contact.css">
+    <link rel="stylesheet" href="../Styles/index.css">
 </head>
 
 <body>
+    <nav>
+        <h1>Luxe<span>Cars</span></h1>
+        <ul>
+            <li><a href="index.html">Accueil</a></a></li>
+            <li><a href="./Pages/Services.html">Services</a></li>
+            <li><a href="./Pages/vehicules.html">vehicules</a></li>
+            <li><a href="./Pages/Contact.html">contact</a></li>
+        </ul>
+        <button>LOGIN IN</button>
+    </nav>
     <section>
         <div class="iframe">
          <fieldset>
