--- a/Pages/Contact.html
+++ b/Pages/Contact.html
@@ -15,9 +15,9 @@
         <h1>Luxe<span>Cars</span></h1>
         <ul>
             <li><a href="index.html">Accueil</a></a></li>
-            <li><a href="./Pages/Services.html">Services</a></li>
-            <li><a href="./Pages/vehicules.html">vehicules</a></li>
-            <li><a href="./Pages/Contact.html">contact</a></li>
+            <li><a href="../Pages/Services.html">Services</a></li>
+            <li><a href="../Pages/vehicules.html">Vehicules</a></li>
+            <li><a href="../Pages/Contact.html">Contact</a></li>
         </ul>
         <button>LOGIN IN</button>
     </nav>
