--- a/Pages/vehicules.html
+++ b/Pages/vehicules.html
@@ -2,11 +2,25 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">  
+      <link rel="stylesheet" href="styles/index.css">
+
     <title>Document</title>
 </head>
 <body>
-    <main></main>
+    <main>
+        
+        <nav>
+            <h1>Luxe<span>Cars</span></h1>
+            <ul>
+                <li><a href="index.html">Accueil</a></a></li>
+                <li><a href="./Pages/Services.html">Services</a></li>
+                <li><a href="./Pages/vehicules.html">vehicules</a></li>
+                <li><a href="./Pages/Contact.html">contact</a></li>
+            </ul>
+            <button>LOGIN IN</button>
+        </nav>
+    </main>
 
     <section>
         
