--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <h1>Luxe<span>Cars</span></h1>
             <ul>
                 <li><a href="index.html">Accueil</a></a></li>
-                <li><a href="./Pages/Services.html">Services</a></li>
+                <li><a href="./pages/Services.html">Services</a></li>
                 <li><a href="./Pages/vehicules.html">vehicules</a></li>
                 <li><a href="./Pages/Contact.html">contact</a></li>
             </ul>
@@ -28,7 +28,7 @@
                 <p>La parfaite symbiose entre et innovation technologiques. <br> Nous pouvons ainsi également afficher pour  <br>
                     vous des contenus et de la publicité basés sur l'utilisation et travaller avec des partenaires</p>
                     
-                    <button>BUY NOW</button>
+                    <button>ACHETEZ MAINTENANT</button>
             </div>
             <div class="box2">
                 <img src="media/ford.jpg.jpg" alt="">
